Fix deprecated JDK API usages
Replace new Integer(int) with Integer.valueOf(int), Class.newInstance()
with getDeclaredConstructor().newInstance(), and File.toURL() with
File.toURI().toURL().

Signed-off-by: Radoslav Husar <radosoft@gmail.com>